<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/holo_blue_bright"

    tools:context="com.example.sunnyboy.weatherapp.MainActivity">

    <TextView
        android:text="@string/cityString"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="@color/textColor"
        android:id="@+id/cityTextView" />

    <TextView
        android:text="@string/zipcodeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:id="@+id/zipcodeTextView"
        android:layout_alignBaseline="@+id/zipcodeEditText"
        android:layout_alignBottom="@+id/zipcodeEditText"
        android:layout_alignParentLeft="true"
        android:textColor="@color/textColor"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:imeOptions="actionDone"
        android:id="@+id/zipcodeEditText"
        android:layout_below="@+id/cityEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="18dp"
        android:textColor="@color/editTextColor"
        android:layout_marginEnd="18dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:ems="10"
        android:id="@+id/cityEditText"
        android:layout_alignBottom="@+id/cityTextView"
        android:layout_alignLeft="@+id/zipcodeEditText"
        android:textColor="@color/editTextColor"
        android:layout_alignStart="@+id/zipcodeEditText" />

    <Button
        android:text="@string/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="getWeather"
        android:id="@+id/button"
        android:layout_below="@+id/zipcodeEditText"
        android:layout_toRightOf="@+id/zipcodeTextView"
        android:layout_toEndOf="@+id/zipcodeTextView" />


    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:id="@+id/descriptionValueTextView"
        android:textSize="20sp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@id/button"
        android:layout_marginTop="30dp" />

    <TextView
        android:text="@string/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:id="@+id/tempValueTextView"
        android:textSize="16sp"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/descriptionValueTextView"
        android:layout_alignLeft="@+id/cityTextView" />

    <TextView
        android:text="@string/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_weight = "1"
        android:id="@+id/humidityValuetextView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tempValueTextView"
        android:layout_alignLeft="@+id/tempValueTextView" />

    <TextView
        android:text="@string/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/windValueTextView"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/humidityValuetextView"
        android:layout_alignLeft="@+id/humidityValuetextView" />

    <TextView
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/windValueTextView"
        android:textSize="16sp"
        android:textColor="@color/textColor"
        android:layout_alignLeft="@+id/humidityValuetextView"
        android:layout_marginTop="10dp"
        android:id="@+id/locationValueTextView" />

    <ToggleButton
        android:text="@string/temperatureUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleTemp"
        android:textOff="@string/toFehrenheit"
        android:textOn="@string/toCelcius"
        android:layout_below="@+id/descriptionValueTextView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp" />
</RelativeLayout>

</ScrollView>